# matlab_px4

./: .gitignore  README.md  exemple_pulisher.slxc  exemples_subscriber.slxc  robotROSFeedbackControlExample.slxc  subscrie_liinear_velocity.m
data_visualizer/: CMakeLists.txt
data_visualizer/include/: TrajectoryVisualizer.h
data_visualizer/src/: TrajectoryVisualizer.cpp  main.cpp
matlab/: compile_ros_messages.m  example_complete_operation.m  example_ros_takeoff.m  exemples_subscriber.slx
matlab/debugging/: Closed_loop_1WAYPOINT.m  MobileRobot.m  MobileRobot1.m  MobileRobot2.m  MobileRobot3.m  MobileRobot4.m  MobileRobotDAPHNE.m  MobileRobot_deb.m  REAL_TIME_POS.m  SIN_REPLANIFICATION.fig  TAKE_OFF.m  TWO_WAYPS_open_loop.m  WH_Closed_loop_1WAYPOINT.m  buon3d.m  command_lines.m  command_lines.m~  computeTrajectory1.m  configFile.m  configFile.txt  exemple_compare.fig  extract_from_fig.m  opt_control_example.m  position_1D_mia.m  prova_ottimizzatore.slx  prova_plot.m  prova_prof.m  prova_wps.m  provaprof_2.m  return_to_origin.m  risultato_boolean_arregladas.fig  risultato_boolean_arregladas.m  vectorMix.m
matlab/debugging/Simulink/: PUBLISHER_POSE.slx  PUBLISHER_set_POSE_to_ZERO.slx  PUBLISHER_set_POSE_to_ZERO.slxc  READ_UAL_POSE.slx  SISTEMA_DI_CONTROLLO.slx  function_to_block.slx  optimization_function.slx  variabili_per_function.m
opt_vel_control/: LAND.m  MobileRobotD4PHNE.m  MobileRobotD4PHNE.m~  command_lines.m  computeTrajectory.m  example_complete_operation.m  newWaypoints.txt  opt_3D.m  opt_control_example.m  show_trajectory_1D.m  versori_normali_bisettrice.m
opt_vel_control/rosbag2Plot/: LEICA.m  trajectory_rosbag.m
wp_calculation/: CMakeLists.txt  empty_space.pcd  main.cpp
(+97 files in other folders)
